overflow for popins fix

--- a/src/styles/popins.scss
+++ b/src/styles/popins.scss
@@ -3,7 +3,6 @@
 .pop-over {
   background:$white;
   border-radius:$radius;
-  overflow:hidden;
   box-shadow:0 2px 5px rgba(0,0,0,0.2), 0 8px 25px rgba(0,0,0,0.2);
   position: relative;
 
